kubernetes/tk-integration-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tk-integration-ns
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-auth
  name: tk-integration-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tk-integration-auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tk-integration-network: "true"
        io.kompose.service: tk-integration-auth
    spec:
      containers:
      - env:
        - name: mp.jwt.verify.publickey.location
          value: /META-INF/resources/publickey.pem
        - name: quarkus.http.port
          value: "8088"
        - name: quarkus.http.ssl-port
          value: "8443"
        - name: quarkus.http.ssl.certificate.file
          value: META-INF/resources/cert.pem
        - name: quarkus.http.ssl.certificate.key-file
          value: META-INF/resources/key.pem
        - name: quarkus.ssl.native
          value: "false"
        - name: smallrye.jwt.sign.key-location
          value: /META-INF/resources/privatekey.pem
        image: tk-integration-auth
        imagePullPolicy: ""
        name: tk-integration-auth
        ports:
        - containerPort: 8088
        - containerPort: 8443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
