kubernetes/tk-integration-fu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tk-integration-ns
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-fu
  name: tk-integration-fu
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tk-integration-fu
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tk-integration-network: "true"
        io.kompose.service: tk-integration-fu
    spec:
      containers:
      - env:
        - name: cv-store-folder
          value: /stored-cvs/
        - name: mp.jwt.verify.publickey.location
          value: /META-INF/resources/publickey.pem
        - name: org.acme.restclient.AuthRestClient/mp-rest/url
          value: http://tk-integration-auth:8080/accesstoken
        - name: quarkus.http.port
          value: "8082"
        - name: quarkus.http.ssl-port
          value: "8444"
        - name: quarkus.http.ssl.certificate.file
          value: META-INF/resources/cert.pem
        - name: quarkus.http.ssl.certificate.key-file
          value: META-INF/resources/key.pem
        - name: smallrye.jwt.sign.key-location
          value: /META-INF/resources/privatekey.pem
        image: tk-integration-fu
        imagePullPolicy: ""
        name: tk-integration-fu
        ports:
        - containerPort: 8082
        - containerPort: 8444
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
