kubernetes/tk-integration-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tk-integration-ns
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-auth
  name: tk-integration-auth
spec:
  ports:
  - name: "8443"
    port: 8443
    targetPort: 8443
  - name: "8088"
    port: 8088
    targetPort: 8088
  - name: 8088-tcp
    port: 8088
    targetPort: 8088
  - name: 8443-tcp
    port: 8443
    targetPort: 8443
  selector:
    io.kompose.service: tk-integration-auth
status:
  loadBalancer: {}
