kubernetes/tk-integration-fu-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tk-integration-ns
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-fu
  name: tk-integration-fu
spec:
  ports:
  - name: "8444"
    port: 8444
    targetPort: 8444
  - name: "8082"
    port: 8082
    targetPort: 8082
  - name: 8082-tcp
    port: 8082
    targetPort: 8082
  - name: 8444-tcp
    port: 8444
    targetPort: 8444
  selector:
    io.kompose.service: tk-integration-fu
status:
  loadBalancer: {}
