kubernetes/tk-integration-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tk-integration-ns
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-main
  name: tk-integration-main
spec:
  type: LoadBalancer
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8445"
    port: 8445
    targetPort: 8445
  selector:
    io.kompose.service: tk-integration-main
status:
  loadBalancer: {}
