kubernetes/full-settings.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tk-integration-ns
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-auth
  name: tk-integration-auth
  namespace: tk-integration-ns
spec:
  ports:
  - name: "8443"
    port: 8443
    targetPort: 8443
  - name: "8088"
    port: 8088
    targetPort: 8088
  selector:
    io.kompose.service: tk-integration-auth
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-fu
  name: tk-integration-fu
  namespace: tk-integration-ns
spec:
  ports:
  - name: "8444"
    port: 8444
    targetPort: 8444
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    io.kompose.service: tk-integration-fu
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-main
  name: tk-integration-main
  namespace: tk-integration-ns
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8445"
    port: 8445
    targetPort: 8445
  selector:
    io.kompose.service: tk-integration-main
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-auth
  name: tk-integration-auth
  namespace: tk-integration-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tk-integration-auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tk-integration-network: "true"
        io.kompose.service: tk-integration-auth
    spec:
      containers:
      - env:
        - name: mp.jwt.verify.publickey.location
          value: /META-INF/resources/publickey.pem
        - name: quarkus.http.port
          value: "8088"
        - name: quarkus.http.ssl-port
          value: "8443"
        - name: quarkus.http.ssl.certificate.file
          value: META-INF/resources/cert.pem
        - name: quarkus.http.ssl.certificate.key-file
          value: META-INF/resources/key.pem
        - name: quarkus.ssl.native
          value: "false"
        - name: smallrye.jwt.sign.key-location
          value: /META-INF/resources/privatekey.pem
        image: spannozzo/tk-integration-auth:latest
        imagePullPolicy: ""
        name: tk-integration-auth
        ports:
        - containerPort: 8088
        - containerPort: 8443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-fu
  name: tk-integration-fu
  namespace: tk-integration-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tk-integration-fu
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tk-integration-network: "true"
        io.kompose.service: tk-integration-fu
    spec:
      containers:
      - env:
        - name: cv-store-folder
          value: /stored-cvs/
        - name: mp.jwt.verify.publickey.location
          value: /META-INF/resources/publickey.pem
        - name: "auth"
          value: http://tk-integration-auth:8080/accesstoken
        - name: quarkus.http.port
          value: "8082"
        - name: quarkus.http.ssl-port
          value: "8444"
        - name: quarkus.http.ssl.certificate.file
          value: META-INF/resources/cert.pem
        - name: quarkus.http.ssl.certificate.key-file
          value: META-INF/resources/key.pem
        - name: smallrye.jwt.sign.key-location
          value: /META-INF/resources/privatekey.pem
        image: spannozzo/tk-integration-fu:latest
        imagePullPolicy: ""
        name: tk-integration-fu
        ports:
        - containerPort: 8082
        - containerPort: 8444
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tk-integration-main
  name: tk-integration-main
  namespace: tk-integration-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tk-integration-main
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tk-integration-network: "true"
        io.kompose.service: tk-integration-main
    spec:
      containers:
      - env:
        - name: mp.jwt.verify.publickey.location
          value: /META-INF/resources/publickey.pem
        - name: "auth.url"
          value: http://tk-integration-auth:8080/accesstoken
        - name: "fu.url"
          value: http://tk-integration-fu:8080/
        - name: quarkus.http.port
          value: "8080"
        - name: quarkus.http.ssl-port
          value: "8445"
        - name: quarkus.http.ssl.certificate.file
          value: META-INF/resources/cert.pem
        - name: quarkus.http.ssl.certificate.key-file
          value: META-INF/resources/key.pem
        - name: smallrye.jwt.sign.key-location
          value: /META-INF/resources/privatekey.pem
        image: spannozzo/tk-integration-main:latest
        imagePullPolicy: ""
        name: tk-integration-main
        ports:
        - containerPort: 8080
        - containerPort: 8445
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tk-integration-network
  namespace: tk-integration-ns
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/tk-integration-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tk-integration-network: "true"
